Fixed the spacing in the alphabet. Closes #36

--- a/bottlecap/layouts/popper/static/css/main.less
+++ b/bottlecap/layouts/popper/static/css/main.less
@@ -379,6 +379,9 @@ th a.selected {
         .smaller();
         float: left;
         line-height: 26px;
+        li {
+            float: left;
+        }
         a, span {
             display: inline-block;
             padding: 0 .4em;
